<resources>
    <string name="app_name">Bookland</string>
    <string name="filters">Filters</string>
    <string name="search">Search...</string>
    <string name="Separator">|</string>
    <string name="or_sign_in_with">Or Sign in With</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_your_confirm_password">enter your Confirm password</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="already_have_an_account">Already have an account?</string>

    <string name="back">Back</string>
    <string name="book">Book</string>
    <string name="bookmark">Bookmark</string>
    <string name="share">Share</string>
    <string name="book_cover">Book Cover</string>
    <string name="hard_cover">Hard Cover</string>
    <string name="pdf">PDF</string>
    <string name="audiobook">Audiobook</string>
    <string name="chapter_1">Chapter 1</string>
    <string name="about_the_book">About the book</string>
    <string name="reviews">Reviews</string>
    <string name="sample">Sample</string>
    <string name="add_to_bag">Add to Bag</string>
    <string name="username">Username</string>

</resources>