<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <!-- Welcome Text -->
        <TextView
            android:id="@+id/txtWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/welcome_back"
            android:textColor="@color/primaryColor"
            android:textSize="26sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <!-- Email Label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="8dp"
                android:text="@string/email"
                android:textColor="@color/primaryColor"
                android:textStyle="bold" />

            <!-- Email Field -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edittext_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_email"
                    app:tint="@color/primaryColor" />

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/enter_your_email_address"
                    android:padding="12dp"
                    android:textColor="#000"
                    android:textColorHint="#AFAFAF" />
            </LinearLayout>

            <!-- Password Label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="8dp"
                android:text="@string/password"
                android:textColor="@color/primaryColor"
                android:textStyle="bold" />

            <!-- Password Field -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edittext_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_lock"
                    app:tint="@color/primaryColor" />

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:textColor="#000"
                    android:textColorHint="#AFAFAF" />

                <ImageView
                    android:id="@+id/btnShowPassword"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_eye"
                    app:tint="@color/primaryColor" />
            </LinearLayout>

            <!-- Forgot Password -->
            <TextView
                android:id="@+id/txtForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="24dp"
                android:text="@string/forgot_password"
                android:textColor="@color/primaryColor"
                android:textStyle="bold" />

            <!-- Sign In Button -->
            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/primaryColor"
                android:text="@string/sign_in"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:cornerRadius="8dp" />


            <!-- Divider -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/primaryColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/or_sign_in_with"
                    android:textColor="@color/primaryColor" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/primaryColor" />
            </LinearLayout>

            <!-- Social Login -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="22dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="12dp"
                    android:src="@drawable/ic_google" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="12dp"
                    android:src="@drawable/ic_twitter" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="12dp"
                    android:src="@drawable/ic_facebook" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtNoAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/primaryColor"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txtSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</ScrollView>